test-rv.log
Testing test/test_src/ack.mbt
2045

Testing test/test_src/adder.mbt
10

Testing test/test_src/adder2.mbt
35

Testing test/test_src/bf.mbt
RuntimeError: unreachable
    at $moonbitlang/minimbt/lower/riscv.abort|Unit|.fn/2115 (wasm://wasm/003c0852:wasm-function[2334]:0x5a6da)
    at @moonbitlang/minimbt/lower/riscv.IteratedBlockInfo::compute_live_set.fn/2116 (wasm://wasm/003c0852:wasm-function[2335]:0x5a8b8)
    at @moonbitlang/minimbt/lower/riscv.Liveness::compute_block_liveness.fn/2301 (wasm://wasm/003c0852:wasm-function[2350]:0x5ae05)
    at @moonbitlang/core/hashmap.T::iter|String+@moonbitlang/minimbt/lower/riscv.IteratedBlockInfo|.fn/2403 (wasm://wasm/003c0852:wasm-function[1672]:0x2425d)
    at @moonbitlang/minimbt/lower/riscv.Liveness::compute_block_liveness.fn/2120 (wasm://wasm/003c0852:wasm-function[2347]:0x5acc8)
    at @moonbitlang/minimbt/lower/riscv.RiscvFnLoweringCtx::lower.fn/2208 (wasm://wasm/003c0852:wasm-function[2453]:0x5dbe9)
    at @moonbitlang/minimbt/lower/riscv.RiscvLoweringCtx::lower.fn/2273 (wasm://wasm/003c0852:wasm-function[2484]:0x61227)
    at @moonbitlang/core/hashmap.T::iter|@moonbitlang/minimbt/core.FnRef+@moonbitlang/minimbt/core.Fn|.fn/2399 (wasm://wasm/003c0852:wasm-function[1680]:0x2455e)
    at @moonbitlang/minimbt/lower/riscv.RiscvLoweringCtx::lower.fn/2226 (wasm://wasm/003c0852:wasm-function[2483]:0x610f8)
    at @moonbitlang/minimbt/bin.CompileStatus::step.fn/2236 (wasm://wasm/003c0852:wasm-function[2514]:0x626d6)
error: failed to run
error(compilation): clang failed with stderr: test/test_src/bf.mbt.S:1:1: error: unknown directive
.aux_b8 live set mismatch: @hashset.of([v5, v10, zero, v0, v6, s11, v2]) and @hashset.of([v5, v10, zero, v0, v6, v2])
^

test/test_src/bf.mbt.S:1:1: error: clang exited with code 1
Exception: Could not open file: out


Testing test/test_src/cls-bug.mbt
912

Testing test/test_src/cls-bug2.mbt
9876543210

Testing test/test_src/cls-rec.mbt
120

Testing test/test_src/cls-reg-bug.mbt
15

Testing test/test_src/debug.mbt


Testing test/test_src/even-odd.mbt
456

Testing test/test_src/fib.mbt
832040

Testing test/test_src/float.mbt
-44604263

Testing test/test_src/funcomp.mbt
247

Testing test/test_src/gcd.mbt
2700

Testing test/test_src/id.mbt
1001

Testing test/test_src/inprod-loop.mbt
16826400

Testing test/test_src/inprod-rec.mbt
16826400

Testing test/test_src/inprod.mbt
32000000

Testing test/test_src/join-reg.mbt
912

Testing test/test_src/join-reg2.mbt
789

Testing test/test_src/join-stack.mbt
1037

Testing test/test_src/join-stack2.mbt
246

Testing test/test_src/join-stack3.mbt
912

Testing test/test_src/landins_knot.mbt
3548768835487672

Testing test/test_src/matmul-flat.mbt
RuntimeError: unreachable
    at Option::unwrap|@moonbitlang/minimbt/lower/riscv.RegWrapper|.fn/459 (wasm://wasm/003c0852:wasm-function[454]:0xead2)
    at @moonbitlang/minimbt/lower/riscv.RegAllocator::query_spill.fn/2098 (wasm://wasm/003c0852:wasm-function[2311]:0x58f49)
    at $moonbitlang/minimbt/lower/riscv.subst_vreg_with_preg_or_spill.fn/2209 (wasm://wasm/003c0852:wasm-function[2454]:0x5fd3f)
    at @moonbitlang/minimbt/lower/riscv.RiscvFnLoweringCtx::post_lower_block.fn/2213 (wasm://wasm/003c0852:wasm-function[2464]:0x604ad)
    at @moonbitlang/minimbt/lower/riscv.RiscvFnLoweringCtx::post_lower.fn/2275 (wasm://wasm/003c0852:wasm-function[2477]:0x60b80)
    at @moonbitlang/core/hashmap.T::iter|@moonbitlang/minimbt/riscv.Label+@moonbitlang/minimbt/lower/riscv.MBasicBlock|.fn/2400 (wasm://wasm/003c0852:wasm-function[1678]:0x2449e)
    at @moonbitlang/minimbt/lower/riscv.RiscvFnLoweringCtx::post_lower.fn/2221 (wasm://wasm/003c0852:wasm-function[2472]:0x60983)
    at @moonbitlang/minimbt/lower/riscv.RiscvLoweringCtx::lower.fn/2273 (wasm://wasm/003c0852:wasm-function[2484]:0x612ad)
    at @moonbitlang/core/hashmap.T::iter|@moonbitlang/minimbt/core.FnRef+@moonbitlang/minimbt/core.Fn|.fn/2399 (wasm://wasm/003c0852:wasm-function[1680]:0x2455e)
    at @moonbitlang/minimbt/lower/riscv.RiscvLoweringCtx::lower.fn/2226 (wasm://wasm/003c0852:wasm-function[2483]:0x610f8)
error: failed to run
error: ld.lld: undefined symbol: minimbt_main
    note: referenced by mincaml
    note:               /Users/waterlens/Projects/mmm/riscv_rt/.zig-cache/o/571f44d8c6918c9facdcde8f3f784d42/libmincaml.a.o:(start.main) in archive riscv_rt/zig-out/lib/libmincaml.a
Exception: Could not open file: out


Testing test/test_src/matmul.mbt
RuntimeError: unreachable
    at Option::unwrap|@moonbitlang/minimbt/lower/riscv.RegWrapper|.fn/459 (wasm://wasm/003c0852:wasm-function[454]:0xead2)
    at @moonbitlang/minimbt/lower/riscv.RegAllocator::query_spill.fn/2098 (wasm://wasm/003c0852:wasm-function[2311]:0x58f49)
    at $moonbitlang/minimbt/lower/riscv.subst_vreg_with_preg_or_spill.fn/2209 (wasm://wasm/003c0852:wasm-function[2454]:0x5fd3f)
    at @moonbitlang/minimbt/lower/riscv.RiscvFnLoweringCtx::post_lower_block.fn/2213 (wasm://wasm/003c0852:wasm-function[2464]:0x604ad)
    at @moonbitlang/minimbt/lower/riscv.RiscvFnLoweringCtx::post_lower.fn/2275 (wasm://wasm/003c0852:wasm-function[2477]:0x60b80)
    at @moonbitlang/core/hashmap.T::iter|@moonbitlang/minimbt/riscv.Label+@moonbitlang/minimbt/lower/riscv.MBasicBlock|.fn/2400 (wasm://wasm/003c0852:wasm-function[1678]:0x2449e)
    at @moonbitlang/minimbt/lower/riscv.RiscvFnLoweringCtx::post_lower.fn/2221 (wasm://wasm/003c0852:wasm-function[2472]:0x60983)
    at @moonbitlang/minimbt/lower/riscv.RiscvLoweringCtx::lower.fn/2273 (wasm://wasm/003c0852:wasm-function[2484]:0x612ad)
    at @moonbitlang/core/hashmap.T::iter|@moonbitlang/minimbt/core.FnRef+@moonbitlang/minimbt/core.Fn|.fn/2399 (wasm://wasm/003c0852:wasm-function[1680]:0x2455e)
    at @moonbitlang/minimbt/lower/riscv.RiscvLoweringCtx::lower.fn/2226 (wasm://wasm/003c0852:wasm-function[2483]:0x610f8)
error: failed to run
error: ld.lld: undefined symbol: minimbt_main
    note: referenced by mincaml
    note:               /Users/waterlens/Projects/mmm/riscv_rt/.zig-cache/o/571f44d8c6918c9facdcde8f3f784d42/libmincaml.a.o:(start.main) in archive riscv_rt/zig-out/lib/libmincaml.a
Exception: Could not open file: out


Testing test/test_src/non-tail-if.mbt
-10

Testing test/test_src/non-tail-if2.mbt
80238

Testing test/test_src/print.mbt
123-456789

Testing test/test_src/shuffle.mbt
214563

Testing test/test_src/spill.mbt
-431

Testing test/test_src/spill2.mbt
77880

Testing test/test_src/spill3.mbt
1617

Testing test/test_src/sum-tail.mbt
50005000

Testing test/test_src/sum.mbt
50005000

